<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts Manager</string>
    <string name="action_settings">Settings</string>
    <string name="showAdditional">Show Additional Fields</string>
    <string name="hideAdditional">Hide Additional Fields</string>
    <string name="nameLabel">Name</string>
    <string name="phoneNumberLabel">0214029179</string>
    <string name="emailLabel">Email</string>
    <string name="addressLabel">Address</string>
    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>
	<string name="jobTitleLabel">Job Title</string>
	<string name="companyLabel">Company</string>
	<string name="websiteLabel">Website</string>
	<string name="imLabel">IM</string>
	<string name="phone_error">Phone Number Error</string>
</resources>
